--- a/Part2/flask1/Dockerfile
+++ b/Part2/flask1/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10-slim-buster
 WORKDIR /app
 COPY . /app/
-RUN pip install -r requirements.txt
+RUN pip install Flask
 EXPOSE 5000
-CMD ["python", "app.py"]
+CMD ["python", "app1.py"]
